hphp/test/slow/protected_internal/static_property_protected_visibility.php.expectf
Fatal error: Invalid static property access: A::foo in %s on line 8
